<resources>
    <string name="app_name">Foo</string>
    <string name="try_again">Try again</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="capitalize_my_balances">MY BALANCES</string>
    <string name="capitalize_currency_exchange">CURRENCY EXCHANGE</string>
    <string name="submit">SUBMIT</string>
    <string name="sell_title">Sell</string>
    <string name="receive_title">Receive</string>
    <string name="zero_currency">0.00</string>
    <string name="currency_converted">Currency Converted</string>
    <string name="ok">Ok</string>
    <string name="done">Done</string>
</resources>
