<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background_vertical"
        android:padding="16dp"
        android:text="@string/currency_converter"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTextView">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/balanceHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/capitalize_my_balances"
            android:textColor="@color/text_header_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/balanceProgressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:clickable="false"
            android:focusable="false"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/balanceHeaderTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/balanceRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/balanceHeaderTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currencyExchangeHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:text="@string/capitalize_currency_exchange"
            android:textColor="@color/text_header_gray"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/balanceRecyclerView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sellCurrencyContainer"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/currencyExchangeHeaderTextView">

            <androidx.cardview.widget.CardView
                android:id="@+id/sellIconCardView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:clickable="false"
                android:focusable="false"
                app:cardBackgroundColor="@color/sell_icon_background"
                app:cardCornerRadius="360dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sellIconImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:scaleY="-1"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_arrow_down_svg" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sellLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/sell_title"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sellEditText"
                app:layout_constraintStart_toEndOf="@id/sellIconCardView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/sellEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@android:color/transparent"
                android:inputType="numberDecimal"
                android:textAlignment="textEnd"
                android:textColor="@color/text_dark"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/sellCurrencySpinnerContainer"
                app:layout_constraintStart_toEndOf="@id/sellLabelTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="100.00" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sellCurrencySpinnerContainer"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sellCurrencyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/sellCurrencyArrow"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="EUR" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/sellCurrencyArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/sellCurrencyTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_spinner_arrow_down_svg" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sellCurrencySpinner"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/sellHorizontalSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="64dp"
                android:background="@color/line_separator_background"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buyCurrencyContainer"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintTop_toBottomOf="@id/sellCurrencyContainer">

            <androidx.cardview.widget.CardView
                android:id="@+id/buyIconCardView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:clickable="false"
                android:focusable="false"
                app:cardBackgroundColor="@color/buy_icon_background"
                app:cardCornerRadius="360dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/buyIconImageView"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_arrow_down_svg" />

            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buyLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/receive_title"
                android:textColor="@color/text_dark"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buyTextView"
                app:layout_constraintStart_toEndOf="@id/buyIconCardView"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="end"
                android:textColor="@color/text_green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buyCurrencySpinnerContainer"
                app:layout_constraintStart_toEndOf="@id/buyLabelTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="+110.30" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buyCurrencySpinnerContainer"
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/buyCurrencyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_dark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/buyCurrencyArrow"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="USD" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/buyCurrencyArrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:scaleType="fitXY"
                    android:scaleX="1.1"
                    android:scaleY="1.1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/buyCurrencyTextView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_spinner_arrow_down_svg" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/buyCurrencySpinner"
                    android:layout_width="1dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="16dp"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/buyHorizontalSeparator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="64dp"
                android:background="@color/line_separator_background"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/submitCardView"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="24dp"
            app:cardElevation="2dp"
            app:layout_constraintEnd_toEndOf="@id/guideline90PercentVertical"
            app:layout_constraintStart_toStartOf="@id/guideline10PercentVertical"
            app:layout_constraintTop_toBottomOf="@id/buyCurrencyContainer">

            <FrameLayout
                android:id="@+id/submitContentFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_background">

                <TextView
                    android:id="@+id/submitTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/submit"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

            </FrameLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline90PercentVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10PercentVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
